# Smart_Integrated_Univirsity_System-

./: CMakeLists.txt  README.md  main.cc
Controllers/: AdminController.cc  AdminController.h  StudentController.cc  StudentController.h  TeacherController.cc  TeacherController.h
Core logic/: Database.cpp  Database.h  Global.cpp  Global.h  UnivirsityProject.cpp  clsAdmin.h  clsAnnouncments.h  clsAttendance.h  clsCourse.h  clsDB.h  clsDate.h  clsExam.h  clsGradeService.h  clsGrades.h  clsInputValidate.h  clsPerson.h  clsRegisterNewCourseScreen.h  clsSchedule.h  clsScreen.h  clsSemester.h  clsStudent.h  clsSystemAnnouncement.h  clsTeacher.h  clsUpdateCurrentSemesterScreen.h  clsUtil.h
